<resources>
    <string name="app_name">微信</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="login_button_text">登录</string>
    <string name="register_button_text">注册</string>
    <string name="logo_description">微信Logo</string>
</resources>